[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 311.0
margin_top = 17.0
margin_right = 472.0
margin_bottom = 68.0
placeholder_text = "Nome"

[node name="Label" type="Label" parent="."]
margin_left = 295.0
margin_top = 127.0
margin_right = 378.0
margin_bottom = 195.0

[node name="Button" type="Button" parent="."]
margin_left = 34.0
margin_top = 6.0
margin_right = 156.0
margin_bottom = 107.0
text = "Botão 1"

[node name="Button2" type="Button" parent="."]
margin_left = 36.0
margin_top = 123.0
margin_right = 155.0
margin_bottom = 232.0
text = "Botão 2"

[node name="Button3" type="Button" parent="."]
margin_left = 38.0
margin_top = 256.0
margin_right = 153.0
margin_bottom = 349.0
text = "Botão 3"

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 312.0
margin_top = 78.0
margin_right = 384.0
margin_bottom = 125.0
placeholder_text = "Numero"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
